tests/NormalTests/paczka1/fuzzy1/65532759.err
Error in line 3: j0I0M4Og A535 44,4
Error in line 1: Y4mb2y S279 66,9
Error in line 10: SwBqWHYQ S279 25,6
Error in line 19: YBMhpyd S279 5,1
Error in line 11: Y4mb2y S598 99,7
Error in line 32: Y4mb2y S279 57,3
